# ta

./: .gitignore  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  ta  tad
.ai/code-reviews/: 20251220.ta-cli-implementation-plan-review.md
.ai/features/: code-highlighting.md
.ai/plans/: 2025-12-20.ta-cli-implementation.md  2025-12-20.ta-fixes-and-improvements.md  2025-12-22.fix-must-issues-revised.md  2025-12-22.fix-must-issues.md  2025-12-22.must-fix-issues.md  2025-12-23-code-highlighting-REVIEW-SUMMARY.md  2025-12-23-code-highlighting.md
.ai/prompts/: 2025-12-20. small-adjustments.md
.claude/agents/: rust-developer.md
.claude/commands/: execute-phase.md  execute-plan.md  plan.md
.claude/skills/clap/: SKILL.md
.claude/skills/cli/: SKILL.md  design-patterns.md  libraries.md  styling.md
.claude/skills/color-eyre/: SKILL.md  comparison.md  context-and-help.md  setup.md
.claude/skills/oxc-ast/: SKILL.md  components.md  dead-code.md  finding-functions.md  json-reporting.md  lint-rules.md  parallel-processing.md  project-structure.md  renaming.md  semantic-model.md  visitor-pattern.md  wasm-cicd.md  wasm-compilation.md
cli/: Cargo.toml
cli/src/: error.rs  main.rs  utils.rs
cli/src/commands/: deps.rs  file.rs  mod.rs  source.rs  symbols.rs  test.rs  watch.rs
cli/tests/: integration_test.rs  test_themes.rs
cli/tests/common/: mod.rs
cli/tests/fixtures/: package.json  simple.ts  test-file.test.ts  tsconfig.json  with-errors.ts
cli/tests/fixtures/highlighting/: README.md  basic_error.ts  long_function.ts  multiple_errors.ts  nested_scope.ts  unicode.ts
cli/tests/fixtures/scripts/: build.ts
cli/tests/fixtures/src/: api.ts  contest.ts  dependencies-legacy.ts  errors.ts  exports.ts  jsdoc-test.ts  network.ts  types.ts  utils.ts
cli/tests/fixtures/test/: api.spec.ts  network.test.ts  utils.test.ts
docs/: ast-and-colorization.md  cli-best-practices.md  cli.md  code-and-md-highlighting.md  dependencies.md  tech-stack.md
docs/commands/: source.md
knowledge-base/: clap.md  cli.md  color-eyre.md  oxc-ast.md  ropey.md  rust-devops.md  rust-logging.md  rust-testing.md  rust.md
lib/: Cargo.toml
lib/benches/: highlighting.rs
lib/proptest-regressions/highlighting/: code_context.txt
lib/src/: analyzer.rs  colorize.rs  dependencies.rs  error.rs  lib.rs  models.rs  output.rs  symbols.rs  tests.rs  type_errors.rs  watcher.rs
lib/src/highlighting/: ansi.rs  code_context.rs  error.rs  error_annotations.rs  markdown_formatter.rs  mod.rs  options.rs  syntect_highlighter.rs  themes.rs
lib/src/visitors/: dependency_visitor.rs  mod.rs  symbol_visitor.rs  test_visitor.rs  type_error_visitor.rs
scripts/: README.md  package.json  review-plan-execute.ts
ts/: package.json  pnpm-lock.yaml
ts/src/: index.ts
(+25 files in other folders)
