[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ta"
path = "src/main.rs"

[dependencies]
ta-lib = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"