[package]
name = "ta"
version.workspace = true
edition.workspace = true

[dependencies]
ta-lib = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
glob = "0.3.3"
serde_json = "1.0.145"
atty = "0.2"
ignore = "0.4"
colored = "2.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
