[package]
name = "ta-lib"
version.workspace = true
edition.workspace = true

[dependencies]
oxc_parser = "0.30"
oxc_semantic = "0.30"
oxc_allocator = "0.30"
oxc_span = "0.30"
oxc_ast = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
thiserror = "2.0"
glob = "0.3"
notify = "7.0"
log = "0.4"
html-escape = "0.2.13"
clap = { version = "4.5.53", features = ["derive"] }
oxc_diagnostics = "0.30"
miette = { version = "7", features = ["derive"] }

[dev-dependencies]
proptest = "1"
insta = "1"
tempfile = "3"
pretty_assertions = "1"
